tooling/nargo_cli/tests/snapshots/execution_success/witness_compression/execute__tests__expanded.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: expanded_code
---
fn main(x: Field, y: pub Field) -> pub Field {
    assert(x != y);
    x + y
}
